--- a/theBeginning/blog/templates/blog/index.html
+++ b/theBeginning/blog/templates/blog/index.html
@@ -7,7 +7,15 @@
     <title>Begyndelsen</title>
 </head>
 <body>
-    <h1>Hej.</h1>
-    <p> Nu vil jeg ikke længere skamme mig over alt det, jeg ikke ved.</p>
+    <h1>Blog posts</h1>
+    <ul>
+        {% for post in posts %}
+            <li>
+                <h2>{{ post.title }}</h2>
+                <p>{{ post.content }}</p>
+                <small>Oprettet den {{ post.created_at }}</small>
+            </li>
+        {% endfor %}
+    </ul>
 </body>
 </html>
